[tool.poetry]
name = "hello-chainlit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
chainlit = "^1.1.202"
huggingface-hub = "^0.23.1"
aiohttp = "^3.9.5"
openai = "^1.30.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
